--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,5 +30,6 @@
   "followontwitter": "Follow on Twitter",
   "@followontwitter": {},
   "removeads":"Remove ads",
-  "@removeads": {}
+  "@removeads": {},
+  "nofavourites":"No Favorites!"
 }
