--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -14,5 +14,6 @@
   "facebooksupport": "Facebook/Soporte",
   "likeusonfacebook": "Síganos en Facebook",
   "followontwitter": "Síganos en Twitter",
-  "removeads":"Verwijder advertenties"
+  "removeads":"Verwijder advertenties",
+  "nofavourites":"Geen favorieten!"
 }
