--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -14,5 +14,6 @@
   "facebooksupport": "Facebook/支持",
   "likeusonfacebook": "在 Facebook 上关注我们",
   "followontwitter": "在 Twitter 上关注",
-  "removeads":"删除广告"
+  "removeads":"删除广告",
+  "nofavourites":"沒有收藏夾！"
 }
