--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -59,5 +59,6 @@
   "@followontwitter": {
     "description": "Prompt to follow the app on Twitter"
   },
-  "removeads":"Quitar anuncios"
+  "removeads":"Quitar anuncios",
+  "nofavourites": "¡Sin favoritos!"
 }
