--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -15,5 +15,12 @@
   "likeusonfacebook": "Síganos en Facebook",
   "followontwitter": "Síganos en Twitter",
   "removeads":"Verwijder advertenties",
-  "nofavourites":"Geen favorieten!"
+  "nofavourites":"Geen favorieten!",
+  "settings":"configuración",
+  "get_ad_free_experience_for": "Obtén una experiencia sin anuncios por",
+  "buy_for": "Comprar por",
+  "papiamento": "Papiamento"
+
+
+
 }
