--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -15,5 +15,12 @@
   "likeusonfacebook": "在 Facebook 上关注我们",
   "followontwitter": "在 Twitter 上关注",
   "removeads":"删除广告",
-  "nofavourites":"沒有收藏夾！"
+  "nofavourites":"沒有收藏夾！",
+  "settings":"设置",
+  "get_ad_free_experience_for": "享受无广告体验，仅需",
+  "buy_for": "购买仅需",
+  "papiamento": "帕皮阿门托语"
+
+
+
 }
