--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -64,7 +64,17 @@
   "settings":"instellingen",
   "get_ad_free_experience_for": "Krijg een advertentievrije ervaring voor",
   "buy_for": "Koop voor",
-  "papiamento": "Papiaments"
+  "papiamento": "Papiaments",
+  "unlock_premium_features":"Premiumfuncties ontgrendelen",
+  "dictionary":"Woordenboek",
+  "monthly":"Maandelijks",
+  "yearly":"Jaarlijks",
+  "continuee":"Doorgaan",
+  "description1m":"Advertentievrij – Geniet 30 dagen lang van Learn Papiamento zonder advertenties",
+  "description1y":"Advertentievrij – Geniet 12 maanden lang van Learn Papiamento zonder advertenties",
+  "description2":"Toegang tot ons Papiaments woordenboek met meer dan 3000 woorden (nog geen audio, audio wordt in toekomstige versies toegevoegd)",
+  "description3":"Tijdens het abonnement zijn alle aankomende premiumfuncties automatisch beschikbaar.",
+  "description4":"Een betere app-ervaring zonder onderbrekingen"
 
 
 
