--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -19,7 +19,17 @@
   "settings":"设置",
   "get_ad_free_experience_for": "享受无广告体验，仅需",
   "buy_for": "购买仅需",
-  "papiamento": "帕皮阿门托语"
+  "papiamento": "帕皮阿门托语",
+  "unlock_premium_features":"解锁高级功能",
+  "dictionary":"字典",
+  "monthly":"每月",
+  "yearly":"每年",
+  "continuee":"继续",
+  "description1m":"无广告体验 – 享受 30 天无广告的 Learn Papiamento",
+  "description1y":"无广告体验 – 享受 12 个月无广告的 Learn Papiamento",
+  "description2":"访问我们包含 3000 多个词汇的帕皮阿门托词典（当前暂无音频，未来版本将添加）",
+  "description3":"订阅期间，所有即将推出的高级功能都将自动开放",
+  "description4":"更顺畅的应用体验，无打扰"
 
 
 
