--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -35,6 +35,16 @@
   "settings":"Settings",
   "get_ad_free_experience_for":"Get an ad-free experience for",
   "buy_for":"Buy for",
-  "papiamento": "Papiamento"
+  "papiamento": "Papiamento",
+  "unlock_premium_features":"Unlock Premium Features",
+  "dictionary":"Dictionary",
+  "monthly":"Monthly",
+  "yearly":"Yearly",
+  "continuee":"Continue",
+  "description1m":"Go Add-Free – Enjoy Learn Papiamento without Ads for 30 Days",
+  "description1y":"Go Add-Free – Enjoy Learn Papiamento without Ads for 12 Months",
+  "description2":"Access to our Papiamento Dictionary which contains over 3000 words (No Audio yet, Audio will be implemented in future versions)",
+  "description3":"During the subscription, all upcoming premium features are automatically accessible.",
+  "description4":"Better app experience without interruptions"
 
 }
