--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -29,7 +29,9 @@
   "description1y":"Sin anuncios – Disfruta de Learn Papiamento sin anuncios durante 12 meses",
   "description2":"Accede a nuestro diccionario de papiamento que contiene más de 3000 palabras (sin audio por ahora, se implementará en futuras versiones)",
   "description3":"Durante la suscripción, todas las funciones premium futuras serán accesibles automáticamente.",
-  "description4":"Mejor experiencia en la app sin interrupciones"
+  "description4":"Mejor experiencia en la app sin interrupciones",
+    "products_not_found":"Productos no encontrados."
+
 
 
 
