--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -74,7 +74,9 @@
   "description1y":"Advertentievrij – Geniet 12 maanden lang van Learn Papiamento zonder advertenties",
   "description2":"Toegang tot ons Papiaments woordenboek met meer dan 3000 woorden (nog geen audio, audio wordt in toekomstige versies toegevoegd)",
   "description3":"Tijdens het abonnement zijn alle aankomende premiumfuncties automatisch beschikbaar.",
-  "description4":"Een betere app-ervaring zonder onderbrekingen"
+  "description4":"Een betere app-ervaring zonder onderbrekingen",
+    "products_not_found":"Producten niet gevonden."
+
 
 
 
