--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -16,20 +16,38 @@
   "followontwitter": "在 Twitter 上关注",
   "removeads":"删除广告",
   "nofavourites":"沒有收藏夾！",
+  "@nofavourites": {},
   "settings":"设置",
+  "@settings": {},
   "get_ad_free_experience_for": "享受无广告体验，仅需",
+  "@get_ad_free_experience_for": {},
   "buy_for": "购买仅需",
+  "@buy_for": {},
   "papiamento": "帕皮阿门托语",
+  "@papiamento": {},
   "unlock_premium_features":"解锁高级功能",
+  "@unlock_premium_features": {},
   "dictionary":"字典",
+  "@dictionary": {},
   "monthly":"每月",
+  "@monthly": {},
   "yearly":"每年",
+  "@yearly": {},
   "continuee":"继续",
+  "@continuee": {},
   "description1m":"无广告体验 – 享受 30 天无广告的 Learn Papiamento",
+  "@description1m": {},
   "description1y":"无广告体验 – 享受 12 个月无广告的 Learn Papiamento",
+  "@description1y": {},
   "description2":"访问我们包含 3000 多个词汇的帕皮阿门托词典（当前暂无音频，未来版本将添加）",
+  "@description2": {},
   "description3":"订阅期间，所有即将推出的高级功能都将自动开放",
-  "description4":"更顺畅的应用体验，无打扰"
+  "@description3": {},
+  "description4":"更顺畅的应用体验，无打扰",
+  "@description4": {},
+  "products_not_found":"未找到产品",
+  "@products_not_found": {}
+
 
 
 
