--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -37,6 +37,7 @@
   "buy_for":"Buy for",
   "papiamento": "Papiamento",
   "unlock_premium_features":"Unlock Premium Features",
+  "premium_features":"Premium Features",
   "dictionary":"Dictionary",
   "monthly":"Monthly",
   "yearly":"Yearly",
