--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -21,6 +21,7 @@
   "buy_for": "Comprar por",
   "papiamento": "Papiamento",
   "unlock_premium_features":"Desbloquear funciones premium",
+  "premium_features":"Funciones premium",
   "dictionary":"Diccionario",
   "monthly":"Mensual",
   "yearly":"Anual",
