--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -66,6 +66,7 @@
   "buy_for": "Koop voor",
   "papiamento": "Papiaments",
   "unlock_premium_features":"Premiumfuncties ontgrendelen",
+  "premium_features":"Premiumfuncties",
   "dictionary":"Woordenboek",
   "monthly":"Maandelijks",
   "yearly":"Jaarlijks",
