--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -46,7 +46,9 @@
   "description4":"更顺畅的应用体验，无打扰",
   "@description4": {},
   "products_not_found":"未找到产品",
-  "@products_not_found": {}
+  "@products_not_found": {},
+  "premium_features":"高级功能"
+
 
 
 
